--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@
       "gymnax==0.0.6",
       "jax[cuda12]==0.4.30",
       "jaxlib==0.4.30",
-      "numpy==1.24.4",
+      "numpy==1.24.3",
       "optax==0.2.1",
       "pandas==1.3.5",
       "scikit-learn==1.5.2",
@@ -24,8 +24,10 @@
       "sentence-transformers==3.1.1",
       "stable-baselines3==2.0.0",
       "transformers==4.44.2",
-      "wandb==0.13.11"
-    ]
+      "wandb==0.13.11",
+      "clu==0.0.12",
+      "tensorflow==2.13.1"
+  ]
 
   authors = [
     { name="ZoyaV" },
